modules/azure_vnet/main.tf

resource "azurerm_network_security_group" "azure_nsg" {
  name                = "${var.name}-nsg"
  location            = var.location
  resource_group_name = var.resource_group_name
}

resource "azurerm_virtual_network" "azure_vnet" {
  name                = "${var.name}-vnet"
  location            = var.location
  resource_group_name = var.resource_group_name
  address_space       = [var.address_space]
  //dns_servers         = ["10.0.0.4", "10.0.0.5"] ["10.0.0.0/16"]

  /*
  subnet {
    name           = "subnet1"
    address_prefix = "10.0.1.0/24"
  }

  subnet {
    name           = "subnet2"
    address_prefix = "10.0.2.0/24"
    security_group = azurerm_network_security_group.azure_nsg.id
  }
  */
  
}
